python-inheritance/tests/1-my_list.txt
>>> MyList = __import__('1-my_list').MyList
>>>
>>> my_list = MyList()
>>> my_list.append(1)
>>> my_list.append(4)
>>> my_list.append(2)
>>> my_list.append(3)
>>> my_list.append(5)
>>> print(my_list)
[1, 4, 2, 3, 5]
>>> my_list.print_sorted()
[1, 2, 3, 4, 5]
>>> print(my_list)
[1, 4, 2, 3, 5]
>>> my_list = MyList()
>>> my_list.append(0)
>>> my_list.append(-2)
>>> my_list.append(-5)
>>> my_list.append(5)
>>> print(my_list)
[0, -2, -5, 5]
>>> my_list.print_sorted()
[-5, -2, 0, 5]
>>> print(my_list)
[0, -2, -5, 5]
>>> my_list.append("str")
>>> print(my_list)
[0, -2, -5, 5, 'str']
>>> my_list.print_sorted()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/julian/holbertonschool-higher_level_programming/python-inheritance/1-my_list.py", line 22, in print_sorted
    print(sorted(self))
          ^^^^^^^^^^^^
TypeError: '<' not supported between instances of 'str' and 'int'
>>> print(my_list
... )
[0, -2, -5, 5, 'str']
